clusters/sirius/apps/jitsi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi
spec:
  selector:
    app: jitsi
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
---
apiVersion: v1
kind: Service
metadata:
  name: jitsi-jvb-udp
spec:
  type: NodePort
  selector:
    app: jitsi
  ports:
    - name: jvb-udp
      port: 10000
      targetPort: jvb-udp
      protocol: UDP
      nodePort: 30000
